Bug 389756 - Net worth line graph totals font size too large (regression)
Summary: Net worth line graph totals font size too large (regression)
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 4.8.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-01 15:25 UTC by Matthew Schultz
Modified: 2019-08-29 00:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments
4.8.0 line chart screenshot example (21.96 KB, image/png)
2018-02-11 05:20 UTC, Matthew Schultz
Details
5.0.0 line chart screenshot example (39.45 KB, image/png)
2018-02-11 05:21 UTC, Matthew Schultz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Schultz 2018-02-01 15:25:37 UTC
kmymoney 4.8.0 net worth graph used to zoom the balance range on line graph on the left so it would only show the balance range starting with the lowest net worth and up to the highest net worth.  Now it always shows that range all the way down to zero even if the balance never goes anywhere near zero.  The biggest problem with this is when you show the balance numbers over a long period of time (several years), they become completely illegible whereas when it was zoomed so that it only showed the net worth to the lowest point, the numbers were visible.  The other loss is the line graph becomes harder to read the changes in net worth.
Comment 1 Matthew Schultz 2018-02-09 19:41:16 UTC
After some tweaking, it appears I can set the beginning date to not include the opening balance so that the graph doesn't show the entire range starting from zero or I could tweak the data range to get the same thing.  The problem with font size still remains though.  I've tried changing the system font size, the kmymoney font size and to look for any font size setting within reports but there doesn't appear to be any way to change the large font size the totals are set to on the net worth line chart.
Comment 2 Ralf Habacker 2018-02-10 08:39:07 UTC
> Now it always shows that range all the way down to zero even 
> if the balance never goes anywhere near zero.  T

This is a regression introduced by fixing bug 383161. 

At the location https://cgit.kde.org/kmymoney.git/commit/?id=6e5b5fd698aac46906e37b2ba3ac0c1e2fc5edfb changing the value from 101 for example to 67 fixes this issue, but reintroduce the mentioned bug, which seems to be caused by an internal problem in KDChart.
Comment 3 Ralf Habacker 2018-02-10 12:36:58 UTC
Git commit c1d3b78bea1ece370dfbefea1723d051c876c8d4 by Ralf Habacker.
Committed on 10/02/2018 at 12:35.
Pushed by habacker into branch '4.8'.

Fix vertical diagram range in case there is only one value displayed

The previous applied fix introduced bug 389756.
Related: bug 381161
FIXED-IN:4.8.2

M  +13   -4    kmymoney/reports/kreportchartview.cpp

https://commits.kde.org/kmymoney/c1d3b78bea1ece370dfbefea1723d051c876c8d4
Comment 4 Matthew Schultz 2018-02-10 15:55:55 UTC
(In reply to Ralf Habacker from comment #3)
> Git commit c1d3b78bea1ece370dfbefea1723d051c876c8d4 by Ralf Habacker.
> Committed on 10/02/2018 at 12:35.
> Pushed by habacker into branch '4.8'.
> 
> Fix vertical diagram range in case there is only one value displayed
> 
> The previous applied fix introduced bug 389756.
> Related: bug 381161
> FIXED-IN:4.8.2
> 
> M  +13   -4    kmymoney/reports/kreportchartview.cpp
> 
> https://commits.kde.org/kmymoney/c1d3b78bea1ece370dfbefea1723d051c876c8d4

Thanks for looking into this.  I assume it will also be pushed to 5.0 since that branch also shows the same problem?
Comment 5 wojnilowicz 2018-02-10 16:47:22 UTC
At least a screenshot would be helpful here.
Comment 6 Matthew Schultz 2018-02-11 05:20:44 UTC
Created attachment 110523 [details]
4.8.0 line chart screenshot example
Comment 7 Matthew Schultz 2018-02-11 05:21:23 UTC
Created attachment 110524 [details]
5.0.0 line chart screenshot example
Comment 8 Matthew Schultz 2018-02-11 05:25:42 UTC
(In reply to NSLW from comment #5)
> At least a screenshot would be helpful here.

I've provided to examples with 4.8.0 and 5.0.0.  One thing I noticed about the old one is it would not try to show the total for some if they were too close together and the old one always showed the total on the left side of the dot.