Add report settings options to switch off automatic adjusting vertical range to data

This allows user to show a diagram from zero to maximum vertical values.

BUG:389756
FIXED-IN:4.8.2